k8s/miniflux/templates/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: miniflux
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`rss.kevingomez.fr`)
      middlewares:
        - name: forwardauth-authelia
          namespace: authelia
      services:
        - kind: Service
          name: miniflux
          port: http
  tls:
    certResolver: letsencrypt
